--- a/header.html
+++ b/header.html
@@ -15,3 +15,15 @@
 <!--search bar-->
     </div>
 </div>
+
+<script>
+var searchbar=document.getElementById('search');
+searchbar.addEventListener("keyup", function(event) {
+
+    
+    if (event.keyCode === 13) {
+        event.preventDefault();
+        document.getElementById("btn").click();
+    }
+});
+</script>
