--- a/header.html
+++ b/header.html
@@ -1,5 +1,6 @@
 <div class="head-container">
     <div class="head">
+    <div class="logo">
         <a href="/">
             <image src="weather.svg" />
         </a>    
@@ -7,6 +8,7 @@
             <h1>Weather</h1>
             <p>powered by open weather api</p>
         </div>
+    </div>
         <!--search bar-->
     <div class="search" >    
         <input type="text" placeholder="city name" id="search"></input>
